# tictactoe-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: game.rs  main.rs  player.rs
src/game/: board.rs  field.rs  game.rs  game_result.rs  mod.rs  piece.rs
src/player/: ai_player.rs  local_player.rs  mod.rs  player.rs  remote_player.rs
