[package]
name = "tictactoe-rs"
version = "0.1.0"
edition = "2021"
authors = ["InDieTasten <indietasten@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
rand = "0.8.5"
